--- a/src/App.css
+++ b/src/App.css
@@ -30,3 +30,9 @@ footer p {
   line-height: 1.2;
   font-size: 0.95rem;
 }
+@media (max-width: 800px) {
+  body{
+     padding-top: 60px; 
+  }
+ 
+}
