--- a/src/App.css
+++ b/src/App.css
@@ -7,16 +7,22 @@ body {
   padding-bottom: 0; /* To prevent footer overlap, adjust to your footer height */
 }
 
+.main-container {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+.contact-section {
+  flex: 1;
+}
+
 footer {
-  /* position: fixed; */
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  padding: 0;
-  margin: 0;
+  margin-top: auto;
+  text-align: center;
+  padding:0;
   background: #fff;
   color: #22223b;
-  text-align: center;
   font-size: 0.95rem;
   font-weight: 400;
   letter-spacing: 0.2px;
@@ -30,9 +36,9 @@ footer p {
   line-height: 1.2;
   font-size: 0.95rem;
 }
+
 @media (max-width: 800px) {
-  body{
-     padding-top: 60px; 
+  body {
+    padding-top: 60px;
   }
- 
 }
