--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,16 @@ body {
   padding-top: 90px; /* Adjust this value to match your header height */
   padding-bottom: 0; /* To prevent footer overlap, adjust to your footer height */
 }
+body {
+    overflow-x: hidden;
+}
+
+#root, .main-container {
+  width: 100vw;
+  max-width: 100vw;
+  overflow-x: hidden;
+  box-sizing: border-box;
+}
 
 .main-container {
   min-height: 100vh;
