--- a/src/styles/Connect.css
+++ b/src/styles/Connect.css
@@ -149,12 +149,12 @@
         font-size: 1.6rem;
     }
     .connect-links {
-        flex-direction: column;
+        /* flex-direction: column; */
         gap: 18px;
         width: 100%;
     }
     .connect-link {
-        width: 100%;
+        width: 10%;
         text-align: center;
     }
 }
